[gd_scene load_steps=3 format=2]

[ext_resource path="res://Menus/PlayMenu/PlayMenu.gd" type="Script" id=1]
[ext_resource path="res://Menus/UI_Mock_Up_Damian_BG.jpg" type="Texture" id=2]

[node name="PlayMenu" type="Container"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 373.0
margin_top = 197.0
margin_right = 405.0
margin_bottom = 226.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]

[node name="Background" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -373.0
margin_top = -197.0
margin_right = 267.0
margin_bottom = 163.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 7
_sections_unfolded = [ "Visibility" ]

[node name="BackButton" type="Button" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 91.0
margin_top = 66.0
margin_right = 199.0
margin_bottom = 117.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "BACK"
flat = false
align = 1
_sections_unfolded = [ "Textures" ]

[node name="NewGameButton" type="Button" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 43.0
margin_top = -165.0
margin_right = 235.0
margin_bottom = -119.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "NEW GAME"
flat = false
align = 1
_sections_unfolded = [ "Textures" ]

[node name="ContinueButton" type="Button" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 43.0
margin_top = -101.0
margin_right = 235.0
margin_bottom = -54.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "LOAD GAME"
flat = false
align = 1
_sections_unfolded = [ "Textures" ]

[node name="LevelSelectorButton" type="Button" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 43.0
margin_top = -37.0
margin_right = 235.0
margin_bottom = 12.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "LEVEL SELECTION"
flat = false
align = 1
_sections_unfolded = [ "Textures" ]

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]

[connection signal="pressed" from="NewGameButton" to="." method="_on_NewGameButton_pressed"]

[connection signal="pressed" from="ContinueButton" to="." method="_on_ContinueButton_pressed"]

[connection signal="pressed" from="LevelSelectorButton" to="." method="_on_LevelSelectorButton_pressed"]


